Fix issue with name of index file *changed portfolio_index.html to be named index.html *changed all files to also no longer have the 'portfolio' prefix *made changes to all file references to reflect these changes *made the text size of the description in previous_work.html so that text going off the screen gets cut off in the middle of the letters, this is so that it is more obvious that there is more content to scroll through

--- a/previous_work_files/previous_work_styles.css
+++ b/previous_work_files/previous_work_styles.css
@@ -111,7 +111,7 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 	color: #262626;
-	font-size: 1.6em;
+	font-size: 1.65em;
 }
 
 #project_info{
